--- a/frontend/src/components/alien.css
+++ b/frontend/src/components/alien.css
@@ -28,3 +28,17 @@
   width: 300px;
   max-width: 100%;
 }
+
+.letter-bars {
+  margin-top: 4px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.letter-bars .bar {
+  width: 30px;
+  height: 4px;
+  border-radius: 2px;
+  margin-top: 2px;
+}
