--- a/frontend/src/components/alien.css
+++ b/frontend/src/components/alien.css
@@ -4,12 +4,12 @@
   width: 40px;
   height: 40px;
   text-align: center;
-  font-size: 24px;
+  font-size: 20px;
   border: 1px solid #ccc;
   border-radius: 4px;
   outline: none;
   transition: border-color 0.3s;
-  margin: 2px;
+  /* margin: 2px; */
 }
 
 #alien-word-inputs input{
